--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,29 +7,29 @@ logging.level.org.springframework.web=INFO
 
 #druid
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.254.130:3306/rc?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=rc
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/rc?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
 spring.datasource.password=123456
-# 初始化大小，最小，最大
+# \uFFFD\uFFFD\u02BC\uFFFD\uFFFD\uFFFD\uFFFD\u0421\uFFFD\uFFFD\uFFFD\uFFFD\u0421\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 spring.datasource.initialSize=5
 spring.datasource.minIdle=1
 spring.datasource.maxActive=20
-# 配置获取连接等待超时的时间
+# \uFFFD\uFFFD\uFFFD\u00FB\uFFFD\u0221\uFFFD\uFFFD\uFFFD\u04F5\u0234\uFFFD\uFFFD\uFFFD\u02B1\uFFFD\uFFFD\u02B1\uFFFD\uFFFD
 spring.datasource.maxWait=5000
-# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+# \uFFFD\uFFFD\uFFFD\u00FC\uFFFD\uFFFD\u0373\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0635\uFFFDfilters\uFFFD\uFFFD\u0225\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u063D\uFFFD\uFFFD\uFFFDsql\uFFFD\u07B7\uFFFD\u0373\uFFFD\u01A3\uFFFD'wall'\uFFFD\uFFFD\uFFFD\u06B7\uFFFD\uFFFD\uFFFD\u01FD
 spring.datasource.filters=stat,wall
-#打开PSCache，并且指定每个连接上PSCache的大小
+#\uFFFD\uFFFDPSCache\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u05B8\uFFFD\uFFFD\u00FF\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDPSCache\uFFFD\u0134\uFFFD\u0421
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 
 #redis
-spring.redis.host=192.168.254.130
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=
+#spring.redis.password=
 
 #mongodb
-spring.data.mongodb.host=192.168.254.130
+spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=rc
 #spring.data.mongodb.username=
