--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,7 @@ spring.data.mongodb.database=rc
 #spring.data.mongodb.username=
 #spring.data.mongodb.password=
 
+elasticsearch.rest.hosts=127.0.0.1:9200
+elasticsearch.rest.username=elastic
+elasticsearch.rest.password=password
+
